# WeatherCheckerProject

./: Makefile  README.md  cash.pickle  moscow.html  pyproject.toml  weather_test.py
weather/: __init__.py  __main__.py
