[tool.poetry]
name = "WeatherChecker"
version = "0.1.0"
description = "lets you find out the weather in a Russian city"
authors = ["MaxWERT <mr.klason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
